// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic: valid-package.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = \\"something\\";

exports.default = index;
"
`;

exports[`basic: valid-package.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./valid-package.cjs.prod.js\\");
} else {
  module.exports = require(\\"./valid-package.cjs.dev.js\\");
}
"
`;

exports[`basic: valid-package.cjs.prod.js 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: !0
});

var index = \\"something\\";

exports.default = index;
"
`;

exports[`basic: valid-package.esm.js 1`] = `
"var index = \\"something\\";

export default index;
"
`;

exports[`basic: valid-package.umd.min.js 1`] = `
"!function(e,t){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=t():\\"function\\"==typeof define&&define.amd?define(t):(e=e||self).validPackage=t()}(this,(function(){\\"use strict\\";return\\"something\\"}));
//# sourceMappingURL=valid-package.umd.min.js.map
"
`;

exports[`basic: valid-package.umd.min.js.map 1`] = `"{\\"version\\":3,\\"file\\":\\"valid-package.umd.min.js\\",\\"sources\\":[\\"../src/index.js\\"],\\"sourcesContent\\":[\\"export default \\\\\\"something\\\\\\";\\\\n\\"],\\"names\\":[],\\"mappings\\":\\"yMAAe\\"}"`;

exports[`typescript thing: declarations/src/index.d.ts 1`] = `
"export declare const thing: any;
"
`;

exports[`typescript thing: declarations/src/other.d.ts 1`] = `
"export declare const thing: () => \\"wow\\";
"
`;

exports[`typescript thing: declarations/src/thing.d.ts 1`] = `
"export declare const makeThing: () => \\"wow\\";
"
`;

exports[`typescript thing: weird-typescript-thing.cjs.d.ts 1`] = `
"export * from \\"./declarations/src/index\\";
"
`;

exports[`typescript thing: weird-typescript-thing.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

const thing = () => \\"wow\\";

const makeThing = () => thing();

const thing$1 = makeThing();

exports.thing = thing$1;
"
`;

exports[`typescript thing: weird-typescript-thing.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./weird-typescript-thing.cjs.prod.js\\");
} else {
  module.exports = require(\\"./weird-typescript-thing.cjs.dev.js\\");
}
"
`;

exports[`typescript thing: weird-typescript-thing.cjs.prod.js 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: !0
});

const thing = () => \\"wow\\", makeThing = () => \\"wow\\", thing$1 = \\"wow\\";

exports.thing = \\"wow\\";
"
`;

exports[`typescript thing: weird-typescript-thing.esm.js 1`] = `
"const thing = () => \\"wow\\";

const makeThing = () => thing();

const thing$1 = makeThing();

export { thing$1 as thing };
"
`;
